--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -20,7 +20,7 @@ body {
   background: white;
   display: grid;
   grid-template-rows: 70px 1fr;
-  padding: 0 20px;
+  padding: 0 20px 30px;
 }
 
 .chat {
