feat: update colors

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,3 +1,10 @@
+:root {
+  --color-broadcaster: #c11069;
+  --color-moderator: #030303;
+  --color-subscriber: #030303;
+  --color-default: #424242;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
@@ -26,7 +33,7 @@ body {
 .chat {
   border-left: 0;
   border-right: 0;
-  color: gray;
+  color: var(--color-default);
   overflow: hidden;
   position: relative;
 }
